--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
 
     <div id="footer">
-        © Kallirroi Georgila, <a href="http://ict.usc.edu/">Institute for Creative Technologies,</a> <a href="http://www.usc.edu/">University of Southern California</a>
+        Copyright Kallirroi Georgila. All rights reserved.
     </div>
 
 </div>
