Fixed copyright issues.

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -41,8 +41,8 @@
             <br>
             Dialogue systems in a particular domain cannot currently
 	    leverage knowledge and experience from other domains.
-	    This project aims to apply transfer in reinforcement learning –
-	    an approach that has been successful in other research problems –
+	    This project aims to apply transfer in reinforcement learning, 
+	    an approach that has been successful in other research problems,
 	    to dialogue. This machine learning approach can allow us to
 	    leverage knowledge and experience from existing dialogue domains,
 	    so that when we move to a new related dialogue domain we do not
@@ -137,7 +137,7 @@
             </p>
 
 	    <p>
-            <b>Reinforcement Learning for Realistic Statistical Spoken Dialogue Systems – Beyond Slot-Filling Applications</b> 
+            <b>Reinforcement Learning for Realistic Statistical Spoken Dialogue Systems: Beyond Slot-Filling Applications</b> 
             <br>
             <em>Funded by the NSF. I am the Principal Investigator and David Traum is the co-Principal Investigator.</em>
             <br>
@@ -230,7 +230,7 @@
     </div>
 
     <div id="footer">
-	© Kallirroi Georgila, <a href="http://ict.usc.edu/">Institute for Creative Technologies,</a> <a href="http://www.usc.edu/">University of Southern California</a>
+	Copyright Kallirroi Georgila. All rights reserved.
     </div>
 
 </div>
