--- a/publications/publications.html
+++ b/publications/publications.html
@@ -228,7 +228,7 @@
             Ramesh Manuvinakurike, David DeVault, and Kallirroi Georgila.
             <a href="manuvinakurike_sigdial17.pdf">
             Using Reinforcement Learning to Model Incrementality in a Fast-Paced Dialogue Game.</a>
-            In <em>Proceedings of the 18th Annual SIGdial Meeting on Discourse and Dialogue</em>, pp. 331-341, Saarbrücken, Germany, 2017.
+            In <em>Proceedings of the 18th Annual SIGdial Meeting on Discourse and Dialogue</em>, pp. 331-341, Saarbruecken, Germany, 2017.
             </p>
 	    
             <p>
@@ -661,7 +661,7 @@
     </div>
 
     <div id="footer">
-        © Kallirroi Georgila, <a href="http://ict.usc.edu/">Institute for Creative Technologies,</a> <a href="http://www.usc.edu/">University of Southern California</a>
+        Copyright Kallirroi Georgila. All rights reserved.
     </div>
 
 </div>
