--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -34,6 +34,10 @@
 
 	    <h2>Teaching</h2>
             <p>
+            <a href="https://kgeorgila.github.io/teaching/cs544-spring2021/index.html">CSCI 544: Applied Natural Language Processing. Spring 2021.</a>
+            </p>
+
+            <p>
             <a href="http://nld.ict.usc.edu/cs644-spring2020/index.html">CSCI 644: Natural Language Dialogue Systems. Spring 2020.</a>
             </p>
 
