--- a/teaching/cs544-spring2021/index.html
+++ b/teaching/cs544-spring2021/index.html
@@ -20,7 +20,7 @@
 <ul>
 <li>Lecture time: Friday 1-4:20pm</li>
 <li>Lecture place: online</li>
-<li>Office hours: TBA</li>
+<li>Office hours: by appointment</li>
 </ul>
 
 
@@ -29,21 +29,21 @@
 <p>
 Prateek Agarwal, pa59946 [AT] usc.edu
 <ul>
-<li>Office hours: TBA</li>
+<li>Office hours: Monday 12-1pm</li>
 </ul>
 </p>
 
 <p>
 Kushal Chawla, kchawla [AT] usc.edu
 <ul>
-<li>Office hours: TBA</li>
+<li>Office hours: Tuesday 1-2pm</li>
 </ul>
 </p>
 
 <p>
 Sarik Ghazarian, sarikgha [AT] usc.edu
 <ul>
-<li>Office hours: TBA</li>
+<li>Office hours: Wednesday 10-11am</li>
 </ul>
 </p>
 
@@ -117,8 +117,8 @@ Students will also have to complete 3 programming assignments and a final online
 <tr><td><b>Date</b></td><td><b>Speaker</b></td><td><b>Topic</b></td></tr>
 <tr><td>January 15 (F)</td><td>Georgila</td><td>Introduction to natural language processing</td></tr>
 
-<tr><td>January 22 (F)</td><td></td>
-  <td>
+<tr><td>January 22 (F)</td><td>Georgila</td>
+  <td>Text processing, text classification (naive Bayes), and n-gram language models
   </td>
 </tr>
 
