--- a/teaching/cs544-spring2021/index.html
+++ b/teaching/cs544-spring2021/index.html
@@ -122,13 +122,13 @@ Students will also have to complete 3 programming assignments and a final online
   </td>
 </tr>
 
-<tr><td>January 29 (F)</td><td></td>
-  <td>
+<tr><td>January 29 (F)</td><td>Georgila</td>
+  <td>Perceptron and speech recognition
   </td>
 </tr>
 
-<tr><td>February 5 (F)</td><td></td>
-  <td>
+<tr><td>February 5 (F)</td><td>Georgila</td>
+  <td>Speech synthesis
   </td>
 </tr>
 
