--- a/teaching/cs544-spring2021/index.html
+++ b/teaching/cs544-spring2021/index.html
@@ -4,7 +4,6 @@
 </head>
 <body>
 
-<h1>THIS PAGE IS UNDER CONSTRUCTION</h1>
 
 
 <h1>CSCI 544 Applied Natural Language Processing, Spring 2021</h1>
@@ -29,21 +28,21 @@
 <p>
 Prateek Agarwal, pa59946 [AT] usc.edu
 <ul>
-<li>Office hours: Monday 12-1pm</li>
+<li>Office hours: Monday 12-1pm, check Announcements on Blackboard for Zoom link</li>
 </ul>
 </p>
 
 <p>
 Kushal Chawla, kchawla [AT] usc.edu
 <ul>
-<li>Office hours: Tuesday 1-2pm</li>
+<li>Office hours: Tuesday 1-2pm, check Announcements on Blackboard for Zoom link</li>
 </ul>
 </p>
 
 <p>
 Sarik Ghazarian, sarikgha [AT] usc.edu
 <ul>
-<li>Office hours: Wednesday 10-11am</li>
+<li>Office hours: Wednesday 10-11am, check Announcements on Blackboard for Zoom link</li>
 </ul>
 </p>
 
@@ -107,6 +106,31 @@ Students will also have to complete 3 programming assignments and a final online
   <li> final online exam - 10% </li>
 </ul>  
 
+<h2>Assignments</h2>
+
+<ul>
+  <li> Assignment 1: Due March 8th, 4pm. </li>
+  <ul>
+    <li><a href=assignment1/CS544-assignment1.pdf target="_blank">Desription (pdf)</a> 
+    <li><a href=assignment1/report.txt target="_blank">Report template (txt)</a> 
+  </ul>  
+  <li> Assignment 2 </li>
+  <li> Assignment 3 </li>
+</ul>  
+
+<h2>Exam</h2>
+
+<p>
+The final exam will be open-note, open-book, and taken online via Blackboard. It is strictly individual, and no collaboration is allowed.
+</p>
+
+<p>
+The online final exam is due at the end of the final exam period (May 5, 4pm Pacific Time). It will be released 48 hours beforehand; students will have the flexibility to start and finish when they like as long as they submit before the deadline.   
+</p>
+
+<p>
+In the lecture slides for the course, we will work through questions and problems similar to those on the exam. The best way to study for the exam is to work through the questions and problems in the lecture materials. 
+</p>
 
 <h2>Schedule</h2>
 
@@ -132,13 +156,13 @@ Students will also have to complete 3 programming assignments and a final online
   </td>
 </tr>
 
-<tr><td>February 12 (F)</td><td></td>
-  <td>
+<tr><td>February 12 (F)</td><td>Georgila</td>
+  <td>Sequence labeling
   </td>
 </tr>
 
-<tr><td>February 19 (F)</td><td></td>
-  <td>
+<tr><td>February 19 (F)</td><td>Georgila</td>
+  <td>Discussion of Assignment 1 and sample problems on Hidden Markov Models
   </td>
 </tr>
 
@@ -149,6 +173,11 @@ Students will also have to complete 3 programming assignments and a final online
 
 <tr><td>March 5 (F)</td><td></td>
   <td>
+  </td>
+</tr>
+
+<tr><td><b>March 8 (M)</b></td><td></td>
+  <td><b>Assignment 1 due at 4pm</b>
   </td>
 </tr>
 
@@ -179,6 +208,11 @@ Students will also have to complete 3 programming assignments and a final online
 
 <tr><td>April 23 (F)</td><td></td>
   <td>
+  </td>
+</tr>
+
+<tr><td><b>May 5 (W)</b></td><td></td>
+  <td><b>Final exam due at 4 pm</b>
   </td>
 </tr>
 
