--- a/teaching/cs544-spring2021/index.html
+++ b/teaching/cs544-spring2021/index.html
@@ -157,12 +157,12 @@ In the lecture slides for the course, we will work through questions and problem
 </tr>
 
 <tr><td>February 12 (F)</td><td>Georgila</td>
-  <td>Sequence labeling
+  <td>Sequence labeling (part 1)
   </td>
 </tr>
 
 <tr><td>February 19 (F)</td><td>Georgila</td>
-  <td>Discussion of Assignment 1 and sample problems on Hidden Markov Models
+  <td>Discussion of Assignment 1 and sequence labeling (part 2)
   </td>
 </tr>
 
