--- a/teaching/cs544-spring2021/index.html
+++ b/teaching/cs544-spring2021/index.html
@@ -162,12 +162,12 @@ In the lecture slides for the course, we will work through questions and problem
 </tr>
 
 <tr><td>February 19 (F)</td><td>Georgila</td>
-  <td>Discussion of Assignment 1 and sequence labeling (part 2)
+  <td>Discussion of Assignment 1 and dialogue management
   </td>
 </tr>
 
-<tr><td>February 26 (F)</td><td></td>
-  <td>
+<tr><td>February 26 (F)</td><td>Georgila</td>
+  <td>Sequence labeling (part 2) and parsing
   </td>
 </tr>
 
