--- a/teaching/cs544-spring2021/index.html
+++ b/teaching/cs544-spring2021/index.html
@@ -162,7 +162,7 @@ In the lecture slides for the course, we will work through questions and problem
 </tr>
 
 <tr><td>February 19 (F)</td><td>Georgila</td>
-  <td>Discussion of Assignment 1 and dialogue management
+  <td>Discussion of Assignment 1 and dialogue management (part 1)
   </td>
 </tr>
 
