--- a/teaching/cs544-spring2021/index.html
+++ b/teaching/cs544-spring2021/index.html
@@ -111,7 +111,7 @@ Students will also have to complete 3 programming assignments and a final online
 <ul>
   <li> Assignment 1: Due March 8th, 4pm. </li>
   <ul>
-    <li><a href=assignment1/CS544-assignment1.pdf target="_blank">Desription (pdf)</a> 
+    <li><a href=assignment1/CS544-assignment1.pdf target="_blank">Description (pdf)</a> 
     <li><a href=assignment1/report.txt target="_blank">Report template (txt)</a> 
   </ul>  
   <li> Assignment 2 </li>
