--- a/teaching/cs544-spring2021/index.html
+++ b/teaching/cs544-spring2021/index.html
@@ -167,7 +167,7 @@ In the lecture slides for the course, we will work through questions and problem
 </tr>
 
 <tr><td>February 26 (F)</td><td>Georgila</td>
-  <td>Sequence labeling (part 2) and parsing
+  <td>Sequence labeling (part 2) and dialogue management (part 2)
   </td>
 </tr>
 
