Update of assignment 1 and schedule

--- a/teaching/cs544-spring2021/index.html
+++ b/teaching/cs544-spring2021/index.html
@@ -109,7 +109,7 @@ Students will also have to complete 3 programming assignments and a final online
 <h2>Assignments</h2>
 
 <ul>
-  <li> Assignment 1: Due March 8th, 4pm. </li>
+  <li> Assignment 1: Due March 10th, 4pm. </li>
   <ul>
     <li><a href=assignment1/CS544-assignment1.pdf target="_blank">Description (pdf)</a> 
     <li><a href=assignment1/report.txt target="_blank">Report template (txt)</a> 
@@ -171,12 +171,12 @@ In the lecture slides for the course, we will work through questions and problem
   </td>
 </tr>
 
-<tr><td>March 5 (F)</td><td></td>
-  <td>
+<tr><td>March 5 (F)</td><td>Georgila</td>
+  <td>Discussion of Assignment 2 and dialogue management (part 3)
   </td>
 </tr>
 
-<tr><td><b>March 8 (M)</b></td><td></td>
+<tr><td><b>March 10 (W)</b></td><td></td>
   <td><b>Assignment 1 due at 4pm</b>
   </td>
 </tr>
