--- a/teaching/cs544-spring2021/index.html
+++ b/teaching/cs544-spring2021/index.html
@@ -114,7 +114,11 @@ Students will also have to complete 3 programming assignments and a final online
     <li><a href=assignment1/CS544-assignment1.pdf target="_blank">Description (pdf)</a> 
     <li><a href=assignment1/report.txt target="_blank">Report template (txt)</a> 
   </ul>  
-  <li> Assignment 2 </li>
+  <li> Assignment 2: Due March 31st, 4pm. </li>
+  <ul>
+    <li><a href=assignment2/CS544-assignment2.pdf target="_blank">Description (pdf)</a> 
+    <li><a href=assignment2/restaurantDatabase.txt target="_blank">Restaurant database (txt)</a> 
+  </ul>  
   <li> Assignment 3 </li>
 </ul>  
 
@@ -188,6 +192,11 @@ In the lecture slides for the course, we will work through questions and problem
 
 <tr><td>March 26 (F)</td><td></td>
   <td>
+  </td>
+</tr>
+
+<tr><td><b>March 31 (W)</b></td><td></td>
+  <td><b>Assignment 2 due at 4pm</b>
   </td>
 </tr>
 
