--- a/teaching/cs544-spring2021/index.html
+++ b/teaching/cs544-spring2021/index.html
@@ -119,7 +119,7 @@ Students will also have to complete 3 programming assignments and a final online
     <li><a href=assignment2/CS544-assignment2.pdf target="_blank">Description (pdf)</a> 
     <li><a href=assignment2/restaurantDatabase.txt target="_blank">Restaurant database (txt)</a> 
   </ul>  
-  <li> Assignment 3 </li>
+  <li> Assignment 3: TBA </li>
 </ul>  
 
 <h2>Exam</h2>
