--- a/teaching/cs544-spring2021/index.html
+++ b/teaching/cs544-spring2021/index.html
@@ -185,13 +185,13 @@ In the lecture slides for the course, we will work through questions and problem
   </td>
 </tr>
 
-<tr><td>March 19 (F)</td><td></td>
-  <td>
+<tr><td>March 19 (F)</td><td>Georgila</td>
+  <td>Natural language generation and machine translation
   </td>
 </tr>
 
-<tr><td>March 26 (F)</td><td></td>
-  <td>
+<tr><td>March 26 (F)</td><td>Georgila</td>
+  <td>Natural language understanding
   </td>
 </tr>
 
