--- a/teaching/cs544-spring2021/index.html
+++ b/teaching/cs544-spring2021/index.html
@@ -200,8 +200,8 @@ In the lecture slides for the course, we will work through questions and problem
   </td>
 </tr>
 
-<tr><td>April 2 (F)</td><td></td>
-  <td>
+<tr><td>April 2 (F)</td><td>Georgila</td>
+  <td>Deep learning for natural language processing
   </td>
 </tr>
 
