--- a/teaching/cs544-spring2021/index.html
+++ b/teaching/cs544-spring2021/index.html
@@ -119,7 +119,10 @@ Students will also have to complete 3 programming assignments and a final online
     <li><a href=assignment2/CS544-assignment2.pdf target="_blank">Description (pdf)</a> 
     <li><a href=assignment2/restaurantDatabase.txt target="_blank">Restaurant database (txt)</a> 
   </ul>  
-  <li> Assignment 3: TBA </li>
+  <li> Assignment 3: Due April 29th, 4pm. </li>
+  <ul>
+    <li><a href=assignment3/CS544-assignment3.pdf target="_blank">Description (pdf)</a> 
+  </ul>  
 </ul>  
 
 <h2>Exam</h2>
@@ -205,18 +208,23 @@ In the lecture slides for the course, we will work through questions and problem
   </td>
 </tr>
 
-<tr><td>April 9 (F)</td><td></td>
-  <td>
+<tr><td>April 9 (F)</td><td>Mark Core (guest lecture)</td>
+  <td>Educational applications of natural language processing
   </td>
 </tr>
 
-<tr><td>April 16 (F)</td><td></td>
-  <td>
+<tr><td>April 16 (F)</td><td>Georgila</td>
+  <td>Discourse
   </td>
 </tr>
 
 <tr><td>April 23 (F)</td><td></td>
   <td>
+  </td>
+</tr>
+
+<tr><td><b>April 29 (Th)</b></td><td></td>
+  <td><b>Assignment 3 due at 4pm</b>
   </td>
 </tr>
 
