--- a/teaching/cs544-spring2021/index.html
+++ b/teaching/cs544-spring2021/index.html
@@ -141,7 +141,6 @@ In the lecture slides for the course, we will work through questions and problem
 
 <h2>Schedule</h2>
 
-<p>The schedule below is TENTATIVE.</p>
 <p></p>
   
 <table border="1">
@@ -194,7 +193,7 @@ In the lecture slides for the course, we will work through questions and problem
 </tr>
 
 <tr><td>March 26 (F)</td><td>Georgila</td>
-  <td>Natural language understanding
+  <td>Natural language understanding (part 1)
   </td>
 </tr>
 
@@ -214,12 +213,12 @@ In the lecture slides for the course, we will work through questions and problem
 </tr>
 
 <tr><td>April 16 (F)</td><td>Georgila</td>
-  <td>Discourse
+  <td>Discussion of Assignment 3 and discourse
   </td>
 </tr>
 
-<tr><td>April 23 (F)</td><td></td>
-  <td>
+<tr><td>April 23 (F)</td><td>Georgila</td>
+  <td>Natural language understanding (part 2), review, and discussion of final exam
   </td>
 </tr>
 
