--- a/teaching/cs644-spring2020/index.html
+++ b/teaching/cs644-spring2020/index.html
@@ -9,7 +9,7 @@
 
 <h2>Instructor</h2>
 
-<a href=http://people.ict.usc.edu/~kgeorgila target="_blank">Kallirroi Georgila</a> (Research Associate Professor, Computer Science, kgeorgila [AT] ict.usc.edu) 
+<a href=https://kgeorgila.github.io target="_blank">Kallirroi Georgila</a> (Research Associate Professor, Computer Science, kgeorgila [AT] ict.usc.edu) 
 
 
 <h2>Location and Time</h2>
