--- a/teaching/teaching.html
+++ b/teaching/teaching.html
@@ -34,7 +34,7 @@
 
 	    <h2>Teaching</h2>
             <p>
-            <a href="https://kgeorgila.github.io/teaching/cs544-spring2021/index.html">CSCI 544: Applied Natural Language Processing. Spring 2021.</a>
+            <a href="cs544-spring2021/index.html">CSCI 544: Applied Natural Language Processing. Spring 2021.</a>
             </p>
 
             <p>
@@ -42,11 +42,11 @@
             </p>
 
             <p>
-            <a href="http://nld.ict.usc.edu/cs544-fall2016/index.html">CSCI 544: Applied Natural Language Processing. Fall 2016.</a>
+            <a href="cs544-fall2016/index.html">CSCI 544: Applied Natural Language Processing. Fall 2016.</a>
             </p>
 
             <p>
-            <a href="http://nld.ict.usc.edu/cs544-fall2015/index.html">CSCI 544: Applied Natural Language Processing. Fall 2015.</a>
+            <a href="cs544-fall2015/index.html">CSCI 544: Applied Natural Language Processing. Fall 2015.</a>
             </p>
 
             <br>
