--- a/professional-activities/professional-activities.html
+++ b/professional-activities/professional-activities.html
@@ -35,6 +35,30 @@
 	    <h2>Organizer and Senior Committee Roles, and Appointments</h2>
 
             <p>
+            Program Co-Chair, Workshop on Semantics and Pragmatics of Dialogue (SemDial): 2021
+            </p>
+
+            <p>
+            Area Chair (Dialogue and Interactive Systems), Conference on Empirical Methods in Natural Language Processing (EMNLP): 2021
+            </p>
+
+            <p>
+            Area Chair (Dialogue and Interactive Systems), Annual Meeting of the Association for Computational Linguistics (ACL): 2021
+            </p>
+
+            <p>
+            Senior Area Co-Chair (Dialogue and Interactive Systems), Meeting of the North American Chapter of the Association for Computational Linguistics (NAACL): 2021
+            </p>
+
+            <p>
+            Area Chair (Dialogue and Interactive Systems), Annual Meeting of the Association for Computational Linguistics (ACL): 2020
+            </p>
+
+            <p>
+            Associate Editor of the Dialogue and Discourse journal: 2019-present
+            </p>
+
+            <p>
             Vice President, SIGdial - Special Interest Group on Discourse and Dialogue: 2017-2019
             </p>
 
@@ -55,7 +79,7 @@
             </p>
 
             <p>
-            Member of the Editorial Board for the Dialogue and Discourse journal: 2018-present
+            Member of the Editorial Board for the Dialogue and Discourse journal: 2018-2019
             </p>
 
             <p>
@@ -87,7 +111,7 @@
             </p>
 
             <p>
-            Member of the Advisory Committee for the Young Researchers Round Table on Spoken Dialogue Systems (YRRSDS): 2019, 2017, 2016, 2015, 2014, 2013, 2012, 2011
+            Member of the Advisory Committee for the Young Researchers Round Table on Spoken Dialogue Systems (YRRSDS): 2020, 2019, 2017, 2016, 2015, 2014, 2013, 2012, 2011
             </p>
 
             <br>
@@ -171,7 +195,7 @@
 	    <h2>Conference and Workshop Program Committees and Reviewing</h2>
 
             <p>
-            Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL): 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011, 2010, 2009, 2008, 2007
+            Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL): 2021, 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2012, 2011, 2010, 2009, 2008, 2007
             </p>
 
             <p>
@@ -187,7 +211,7 @@
             </p>
 
             <p>
-            Conference on Empirical Methods in Natural Language Processing (EMNLP): 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2011, 2009
+            Conference on Empirical Methods in Natural Language Processing (EMNLP): 2020, 2019, 2018, 2017, 2016, 2015, 2014, 2013, 2011, 2009
             </p>
 
             <p>
@@ -195,11 +219,11 @@
             </p>
 
             <p>
-            International Conference on Computational Linguistics (COLING): 2018, 2016
+            International Conference on Computational Linguistics (COLING): 2020, 2018, 2016
             </p>
 
             <p>
-            Annual Conference of the International Speech Communication Association (INTERSPEECH): 2019, 2018, 2017
+            Annual Conference of the International Speech Communication Association (INTERSPEECH): 2020, 2019, 2018, 2017
             </p>
 
             <p>
@@ -219,7 +243,7 @@
             </p>
 
             <p>
-            International Conference on Language Resources and Evaluation (LREC): 2016, 2014, 2012, 2010, 2008
+            International Conference on Language Resources and Evaluation (LREC): 2020, 2016, 2014, 2012, 2010, 2008
             </p>
 
             <p>
@@ -227,7 +251,7 @@
             </p>
 
             <p>
-            International Conference on Acoustics, Speech, and Signal Processing  (ICASSP): 2019, 2009, 2008, 2007
+            International Conference on Acoustics, Speech, and Signal Processing  (ICASSP): 2020, 2019, 2009, 2008, 2007
             </p>
 
             <p>
@@ -255,13 +279,13 @@
             </p>
 
             <p>
-            International Workshop on Spoken Dialogue Systems Technology (IWSDS): 2019, 2018, 2017
+            International Workshop on Spoken Dialogue Systems Technology (IWSDS): 2021, 2020, 2019, 2018, 2017
             </p>
 
             <p>
 
 	    <p>
-            NIPS Conversational AI Workshop: 2018, 2017
+            NIPS Conversational AI Workshop: 2019, 2018, 2017
             </p>
 
 	    <p>
@@ -273,7 +297,7 @@
             </p>
 
             <p>
-            Workshop on Semantics and Pragmatics of Dialogue (SemDial): 2019, 2017, 2016, 2015, 2014, 2013, 2012
+            Workshop on Semantics and Pragmatics of Dialogue (SemDial): 2020, 2019, 2017, 2016, 2015, 2014, 2013, 2012
             </p>
 
             <p>
@@ -281,7 +305,7 @@
             </p>
 
             <p>
-            Workshop on Resources and Processing of Linguistic and Extra-Linguistic Data from People with Various Forms of Cognitive/Psychiatric Impairments (RaPID): 2018, 2016
+            Workshop on Resources and Processing of Linguistic and Extra-Linguistic Data from People with Various Forms of Cognitive/Psychiatric Impairments (RaPID): 2020, 2018, 2016
             </p>
 
             <p>
