--- a/publications/publications.html
+++ b/publications/publications.html
@@ -36,8 +36,9 @@
 
 	    <p>
             Seitaro Shinagawa, Koichiro Yoshino, Seyed Hossein Alavi, Kallirroi Georgila, David Traum, Sakriani Sakti, and Satoshi Nakamura.
-	    An Interactive Image Editing System using an Uncertainty-based Confirmation Strategy. 
-            IEEE Access, 2020. (to appear) 
+            <a href="https://ieeexplore.ieee.org/document/9099288">
+	    An Interactive Image Editing System using an Uncertainty-based Confirmation Strategy.</a> 
+            IEEE Access, 2020.  
             </p>
 
 	    <p>
@@ -120,9 +121,15 @@
 
 	    <h2>Conference and Workshop Papers</h2>
 
+	    <p> Divya Tadimeti, Kallirroi Georgila, and David Traum.
+            How Well Can an Agent Understand Different Accents?	      
+            In <em>Proceedings of the 5th Widening NLP (WiNLP) Workshop - Co-located with EMNLP</em>, Punta Cana, Dominican Republic, 2021. (to appear)
+	    </p>  
+
 	    <p> Carla Gordon, Kallirroi Georgila, Volodymyr Yanov, and David Traum.
-            Towards Personalization of Spoken Dialogue System Communication Strategies.	      
-            In <em>Proceedings of the 11th International Workshop on Spoken Dialogue Systems Technology (IWSDS)</em>, Barcelona, Spain, 2020. (to appear) 
+            <a href="gordon_iwsds20.pdf">
+            Towards Personalization of Spoken Dialogue System Communication Strategies.</a>	      
+            In <em>Proceedings of the 11th International Workshop on Spoken Dialogue Systems Technology (IWSDS)</em>, Barcelona, Spain, 2020. <em>Lecture Notes in Eletrical Engineering</em>, Vol. 704, pp. 145-160, Springer Singapore, 2021.
 	    </p>  
 
 	    <p> Kallirroi Georgila, Anton Leuski, Volodymyr Yanov, and David Traum.
