--- a/professional-activities/professional-activities.html
+++ b/professional-activities/professional-activities.html
@@ -47,7 +47,7 @@
             </p>
 
             <p>
-            Senior Area Co-Chair (Dialogue and Interactive Systems), Meeting of the North American Chapter of the Association for Computational Linguistics (NAACL): 2021
+            Senior Area Chair (Dialogue and Interactive Systems), Meeting of the North American Chapter of the Association for Computational Linguistics (NAACL): 2021
             </p>
 
             <p>
@@ -63,7 +63,7 @@
             </p>
 
             <p>
-            Senior Area Co-Chair (Dialogue and Interactive Systems), Annual Meeting of the Association for Computational Linguistics (ACL): 2019
+            Senior Area Chair (Dialogue and Interactive Systems), Annual Meeting of the Association for Computational Linguistics (ACL): 2019
             </p>
 
             <p>
@@ -75,11 +75,11 @@
             </p>
 
             <p>
-            Member of the Editorial Board for the Computational Linguistics journal: 2018-2020
+            Member of the Editorial Board of the Computational Linguistics journal: 2018-2020
             </p>
 
             <p>
-            Member of the Editorial Board for the Dialogue and Discourse journal: 2018-2019
+            Member of the Editorial Board of the Dialogue and Discourse journal: 2018-2019
             </p>
 
             <p>
@@ -91,15 +91,15 @@
             </p>
 
             <p>
-            Mentoring Chair, Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL): 2012
-            </p>
-
-            <p>
             Associate Chair, International Conference on Multimodal Interaction (ICMI): 2013
             </p>
 
             <p>
-            Area Co-Chair (Discourse, Dialogue and Pragmatics), Conference of the European Chapter of the Association for Computational Linguistics (EACL): 2012
+            Mentoring Chair, Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL): 2012
+            </p>
+
+            <p>
+            Area Chair (Discourse, Dialogue and Pragmatics), Conference of the European Chapter of the Association for Computational Linguistics (EACL): 2012
             </p>
 
             <p>
@@ -187,7 +187,7 @@
             </p>
 
             <p>
-            Grant panelist for the National Science Foundation, USA
+            Grant panelist for the National Science Foundation, USA (served on 3 reviewing panels)
             <p>
 
             <br>
@@ -207,7 +207,7 @@
             </p>
 
             <p>
-            Conference of the European Chapter of the Association for Computational Linguistics (EACL): 2017
+            Conference of the European Chapter of the Association for Computational Linguistics (EACL): 2021, 2017
             </p>
 
             <p>
@@ -235,7 +235,7 @@
             </p>
 
             <p>
-            International Joint Conference on Artificial Intelligence (IJCAI): 2016
+            International Joint Conference on Artificial Intelligence (IJCAI): 2020, 2016
             </p>
 
             <p>
@@ -255,7 +255,7 @@
             </p>
 
             <p>
-            FLAIRS Conference: 2019
+            FLAIRS Conference: 2020, 2019
             </p>
 
             <p>
@@ -285,7 +285,15 @@
             <p>
 
 	    <p>
-            NIPS Conversational AI Workshop: 2019, 2018, 2017
+            NeurIPS Conversational AI Workshop: 2019, 2018, 2017
+            </p>
+
+	    <p>
+            NeurIPS Human in the Loop Dialogue Systems Workshop: 2020
+            </p>
+
+	    <p>
+            Annual West Coast NLP Summit (WeCNLP): 2021
             </p>
 
 	    <p>
@@ -306,6 +314,10 @@
 
             <p>
             Workshop on Resources and Processing of Linguistic and Extra-Linguistic Data from People with Various Forms of Cognitive/Psychiatric Impairments (RaPID): 2020, 2018, 2016
+            </p>
+
+            <p>
+            Workshop on the 9th Dialogue System Technology Challenge (DSTC9): 2021
             </p>
 
             <p>
