--- a/professional-activities/professional-activities.html
+++ b/professional-activities/professional-activities.html
@@ -119,19 +119,19 @@
 	    <h2>Journal Reviewing and Grant Panelist</h2>
 
             <p>
-            Computer Speech and Language
-            </p>
-                
-            <p>
-            Speech Communication
-            </p>
-
-            <p>
             Computational Linguistics
             </p>
 
+            <p>
+            Computer Speech and Language
+            </p>
+                
             <p>                
             Dialogue and Discourse
+            </p>
+
+            <p>
+            Speech Communication
             </p>
 
             <p>
@@ -140,6 +140,10 @@
 
             <p>
             ACM Transactions on Asian and Low-Resource Language Information Processing
+            </p>
+
+            <p>
+            IEEE Transactions on Audio, Speech and Language Processing 
             </p>
 
             <p>
