--- a/professional-activities/professional-activities.html
+++ b/professional-activities/professional-activities.html
@@ -35,7 +35,7 @@
 	    <h2>Organizer and Senior Committee Roles, and Appointments</h2>
 
             <p>
-            Program Co-Chair, Workshop on Semantics and Pragmatics of Dialogue (SemDial): 2021
+            Program Co-Chair, Workshop on Semantics and Pragmatics of Dialogue (SemDial-PotsDial): 2021
             </p>
 
             <p>
@@ -103,7 +103,7 @@
             </p>
 
             <p>
-            Program Co-Chair, Workshop on Semantics and Pragmatics of Dialogue (SemDial): 2011
+            Program Co-Chair, Workshop on Semantics and Pragmatics of Dialogue (SemDial-Los Angelogue): 2011
             </p>
 
             <p>
