--- a/publications/publications.html
+++ b/publications/publications.html
@@ -36,11 +36,13 @@
 
 	    <p>
             Seitaro Shinagawa, Koichiro Yoshino, Seyed Hossein Alavi, Kallirroi Georgila, David Traum, Sakriani Sakti, and Satoshi Nakamura.
-            <a href="https://ieeexplore.ieee.org/document/9099288">
+            <a href="shinagawa_access21.pdf">
 	    An Interactive Image Editing System using an Uncertainty-based Confirmation Strategy.</a> 
-            IEEE Access, 2020.  
+            <em> IEEE Access</em>, Volume 8, pages 98471-98480, 2020.
+            <a href="https://ieeexplore.ieee.org/document/9099288">
+            Journal Link.</a>
             </p>
-
+            
 	    <p>
             Kallirroi Georgila.
 	    Speech Synthesis: State-of-the-art and Challenges for the Future.  
@@ -49,23 +51,29 @@
 
 	    <p>
             Elnaz Nouri, Kallirroi Georgila, and David Traum.
-            <a href="http://link.springer.com/article/10.1007/s00146-014-0570-7">
+            <a href="nouri_aisociety17.pdf">
             Culture-Specific Models of Negotiation for Virtual Characters: Multi-Attribute Decision-Making Based on Culture-Specific Values.</a> 
             <em> AI & Society, Special Issue on Culturally Motivated Virtual Characters</em>, 32(1):51-63, Springer, 2017 (first published online in 2014). 
+            <a href="http://link.springer.com/article/10.1007/s00146-014-0570-7">
+	    Journal Link.</a>  
             </p>
 	    
 	    <p>
             Takuya Hiraoka, Kallirroi Georgila, Elnaz Nouri, David Traum, and Satoshi Nakamura.	    
-            <a href="https://www.jstage.jst.go.jp/article/tjsai/31/4/31_B-FC1/_article">
+            <a href="hiraoka_tjsai16.pdf">
             Reinforcement Learning of Multi-Party Trading Dialog Policies.</a> 
 	    <em> Transactions of the Japanese Society for Artificial Intelligence</em>, Vol. 31, No. 4, 2016.
+            <a href="https://www.jstage.jst.go.jp/article/tjsai/31/4/31_B-FC1/_article">
+	    Journal Link.</a>  
 	    </p>
 
             <p>
             Kallirroi Georgila, Maria Wolters, Johanna D. Moore, and Robert H. Logie.
-            <a href="https://link.springer.com/article/10.1007/s10579-010-9118-8">
+            <a href="georgila_lre10.pdf">
             The MATCH Corpus: A Corpus of Older and Younger Users' Interactions with Spoken Dialogue Systems.</a> 
             <em> Language Resources and Evaluation</em>, 44(3):221-261, Springer, 2010.
+            <a href="https://link.springer.com/article/10.1007/s10579-010-9118-8">
+	    Journal Link.</a>  
             </p>
 
             <p>
@@ -73,13 +81,17 @@
             <a href="georgila_nle09.pdf">
             Automatic Annotation of Context and Speech Acts for Dialogue Corpora.</a> 
             <em> Journal of Natural Language Engineering</em>, 15(3):315-353, Cambridge University Press, 2009.
+            <a href="https://www.cambridge.org/core/journals/natural-language-engineering/article/automatic-annotation-of-context-and-speech-acts-for-dialogue-corpora/012CD34F4A699B5345E87845FAA2C1AC">
+	    Journal Link.</a>  
             </p>
 
             <p>
             Maria Wolters, Kallirroi Georgila, Johanna D. Moore, and Sarah E. MacPherson.
-            <a href="http://dl.acm.org/citation.cfm?id=1525842">
+            <a href="wolters_taccess09.pdf">
             Being Old Doesn't Mean Acting Old: How Older Users Interact with Spoken Dialog Systems.</a>
             <em> ACM Transactions on Accessible Computing (TACCESS)</em>, Volume 2, Issue 1, Article No. 2, May 2009.
+            <a href="http://dl.acm.org/citation.cfm?id=1525842">
+	    Journal Link.</a>  
             </p>
 
             <p>
@@ -87,6 +99,8 @@
             <a href="wolters_iwc09.pdf">
             Reducing Working Memory Load in Spoken Dialogues: Do We Have to Limit the Number of Options?</a>
             <em> Interacting with Computers</em>, 21(4):276-287, Elsevier, 2009.
+            <a href="https://academic.oup.com/iwc/article/21/4/276/717602">
+	    Journal Link.</a>  
             </p>
 
             <p>
@@ -94,6 +108,8 @@
             <a href="henderson_cl08.pdf">
             Hybrid Reinforcement/Supervised Learning of Dialogue Policies from Fixed Datasets.</a> 
             <em> Computational Linguistics</em>, 34(4):487-511, MIT Press, 2008.
+            <a href="https://direct.mit.edu/coli/article/34/4/487/1997/Hybrid-Reinforcement-Supervised-Learning-of">
+	    Journal Link.</a>  
             </p>
 
             <p>
@@ -101,6 +117,8 @@
             <a href="georgila_ijst03.pdf">
             A Speech-Based Human-Computer Interaction System for Automating Directory Assistance Services.</a> 
             <em> International Journal of Speech Technology, Special Issue on Speech and Human Computer Interaction</em>, Vol. 6, No. 2, pp. 145-159, Kluwer Academic Publishers, April 2003.
+	    <a href="https://link.springer.com/article/10.1023/A:1022338631326">
+	    Journal Link.</a?  
             </p>
 
             <p>
@@ -108,6 +126,8 @@
             <a href="georgila_ijst02.pdf">
             Large Vocabulary Search Space Reduction Employing Directed Acyclic Word Graphs and Phonological Rules.</a> 
             <em> International Journal of Speech Technology</em>, Vol. 5, No. 4, pp. 355-370, Kluwer Academic Publishers, November 2002.
+	    <a href="https://link.springer.com/article/10.1023/A%3A1020965126094">
+	    Journal Link.</a>  
             </p>
 
             <p>
