--- a/publications/publications.html
+++ b/publications/publications.html
@@ -38,7 +38,7 @@
             Seitaro Shinagawa, Koichiro Yoshino, Seyed Hossein Alavi, Kallirroi Georgila, David Traum, Sakriani Sakti, and Satoshi Nakamura.
             <a href="shinagawa_access21.pdf">
 	    An Interactive Image Editing System using an Uncertainty-based Confirmation Strategy.</a> 
-            <em> IEEE Access</em>, Volume 8, pages 98471-98480, 2020.
+            <em> IEEE Access</em>, Vol. 8, pp. 98471-98480, 2020.
             <a href="https://ieeexplore.ieee.org/document/9099288">
             Journal Link.</a>
             </p>
