--- a/publications/publications.html
+++ b/publications/publications.html
@@ -37,7 +37,7 @@
 	    <p>
             Seitaro Shinagawa, Koichiro Yoshino, Seyed Hossein Alavi, Kallirroi Georgila, David Traum, Sakriani Sakti, and Satoshi Nakamura.
             <a href="shinagawa_access21.pdf">
-	    An Interactive Image Editing System using an Uncertainty-based Confirmation Strategy.</a> 
+	    An Interactive Image Editing System using an Uncertainty-Based Confirmation Strategy.</a> 
             <em> IEEE Access</em>, Vol. 8, pp. 98471-98480, 2020.
             <a href="https://ieeexplore.ieee.org/document/9099288">
             Journal Link.</a>
