--- a/publications/publications.html
+++ b/publications/publications.html
@@ -97,7 +97,7 @@
             <p>
             Maria Wolters, Kallirroi Georgila, Johanna D. Moore, Robert H. Logie, Sarah E. MacPherson, and Matthew Watson.
             <a href="wolters_iwc09.pdf">
-            Reducing Working Memory Load in Spoken Dialogues</a>
+            Reducing Working Memory Load in Spoken Dialogue Systems.</a>
             <em> Interacting with Computers</em>, 21(4):276-287, Elsevier, 2009.
             <a href="https://academic.oup.com/iwc/article/21/4/276/717602">
 	    Journal Link.</a>  
