--- a/publications/publications.html
+++ b/publications/publications.html
@@ -116,7 +116,7 @@
             Kallirroi Georgila, Kyriakos Sgarbas, Anastasios Tsopanoglou, Nikos Fakotakis, and George Kokkinakis. 
             <a href="georgila_ijst03.pdf">
             A Speech-Based Human-Computer Interaction System for Automating Directory Assistance Services.</a> 
-            <em> International Journal of Speech Technology, Special Issue on Speech and Human Computer Interaction</em>, Vol. 6, No. 2, pp. 145-159, Kluwer Academic Publishers, April 2003.
+            <em> International Journal of Speech Technology, Special Issue on Speech and Human Computer Interaction</em>, Vol. 6, No. 2, pp. 145-159, April 2003.
 	    <a href="https://link.springer.com/article/10.1023/A:1022338631326">
 	    Journal Link.</a?  
             </p>
@@ -125,7 +125,7 @@
             Kallirroi Georgila, Nikos Fakotakis, and George Kokkinakis. 
             <a href="georgila_ijst02.pdf">
             Large Vocabulary Search Space Reduction Employing Directed Acyclic Word Graphs and Phonological Rules.</a> 
-            <em> International Journal of Speech Technology</em>, Vol. 5, No. 4, pp. 355-370, Kluwer Academic Publishers, November 2002.
+            <em> International Journal of Speech Technology</em>, Vol. 5, No. 4, pp. 355-370, November 2002.
 	    <a href="https://link.springer.com/article/10.1023/A%3A1020965126094">
 	    Journal Link.</a>  
             </p>
