--- a/publications/publications.html
+++ b/publications/publications.html
@@ -143,13 +143,13 @@
 
 	    <p> Divya Tadimeti, Kallirroi Georgila, and David Traum.
             How Well Can an Agent Understand Different Accents?	      
-            In <em>Proceedings of the 5th Widening NLP (WiNLP) Workshop - Co-located with EMNLP</em>, Punta Cana, Dominican Republic, 2021. (to appear)
+            In <em>5th Widening NLP (WiNLP) Workshop - Co-located with EMNLP</em>, Punta Cana, Dominican Republic, 2021. (to appear)
 	    </p>  
 
 	    <p> Carla Gordon, Kallirroi Georgila, Volodymyr Yanov, and David Traum.
             <a href="gordon_iwsds20.pdf">
             Towards Personalization of Spoken Dialogue System Communication Strategies.</a>	      
-            In <em>Proceedings of the 11th International Workshop on Spoken Dialogue Systems Technology (IWSDS)</em>, Barcelona, Spain, 2020. <em>Lecture Notes in Eletrical Engineering</em>, Vol. 704, pp. 145-160, Springer Singapore, 2021.
+            In <em>Proceedings of the 11th International Workshop on Spoken Dialogue Systems Technology (IWSDS)</em>, Barcelona, Spain, 2020. <em>Lecture Notes in Electrical Engineering</em>, Vol. 704, pp. 145-160, Springer Singapore, 2021.
 	    </p>  
 
 	    <p> Kallirroi Georgila, Anton Leuski, Volodymyr Yanov, and David Traum.
@@ -242,7 +242,7 @@
 	    <p> Kallirroi Georgila, Carla Gordon, Hyungtak Choi, Jill Boberg, Heesik Jeon, and David Traum.
             <a href="georgila_iwsds18.pdf">
             Toward Low-Cost Automated Evaluation Metrics for Internet of Things Dialogues.</a>	      
-            In <em>Proceedings of the 9th International Workshop on Spoken Dialogue Systems Technology (IWSDS)</em>, Singapore, 2018. <em>Lecture Notes in Eletrical Engineering</em>, Vol. 579, pp. 161-175, Springer Singapore, 2019.
+            In <em>Proceedings of the 9th International Workshop on Spoken Dialogue Systems Technology (IWSDS)</em>, Singapore, 2018. <em>Lecture Notes in Electrical Engineering</em>, Vol. 579, pp. 161-175, Springer Singapore, 2019.
 	    </p>  
     	    	    
             <p> Ramesh Manuvinakurike, Jacqueline Brixey, Trung Bui, Walter Chang, Doo Soon Kim, Ron Artstein, and Kallirroi Georgila.
@@ -521,7 +521,7 @@
             Kallirroi Georgila and Oliver Lemon.
             <a href="georgila_brandial06.pdf">
             Programming by Voice: Enhancing Adaptivity and Robustness of Spoken Dialogue Systems.</a> 
-            In <em>Proceedings of the 10th Workshop on the Semantics and Pragmatics of Dialogue (SEMDIAL:BRANDIAL)</em>, Potsdam, Germany, 2006.
+            In <em>Proceedings of the 10th Workshop on the Semantics and Pragmatics of Dialogue (SemDial-Brandial)</em>, Potsdam, Germany, 2006.
             </p>
 
             <p>
@@ -549,7 +549,7 @@
             Kallirroi Georgila, Oliver Lemon, and James Henderson. 
             <a href="georgila_dialor05.pdf">
             Automatic Annotation of COMMUNICATOR Dialogue Data for Learning Dialogue Strategies and User Simulations.</a> 
-            In <em> Proceedings of the 9th Workshop on the Semantics and Pragmatics of Dialogue (SEMDIAL:DIALOR)</em>, pp. 61-68, Nancy, France, 2005.
+            In <em> Proceedings of the 9th Workshop on the Semantics and Pragmatics of Dialogue (SemDial:DIALOR)</em>, pp. 61-68, Nancy, France, 2005.
             </p>
 
             <p>
