--- a/publications/publications.html
+++ b/publications/publications.html
@@ -143,7 +143,7 @@
 
 	    <p> Divya Tadimeti, Kallirroi Georgila, and David Traum.
             How Well Can an Agent Understand Different Accents?	      
-            In <em>5th Widening NLP (WiNLP) Workshop - Co-located with EMNLP</em>, Punta Cana, Dominican Republic, 2021. (to appear)
+            In <em>the 5th Widening NLP (WiNLP) Workshop - Co-located with EMNLP</em>, Punta Cana, Dominican Republic, 2021. (to appear)
 	    </p>  
 
 	    <p> Carla Gordon, Kallirroi Georgila, Volodymyr Yanov, and David Traum.
