--- a/publications/publications.html
+++ b/publications/publications.html
@@ -180,7 +180,7 @@
             Carla Gordon, Volodymyr Yanov, David Traum, and Kallirroi Georgila.
             <a href="gordon_londonlogue19.pdf">
             A Wizard of Oz Data Collection Framework for Internet of Things Dialogues.</a>
-            In <em>Proceedings of the 23rd Workshop on the Semantics and Pragmatics of Dialogue (SemDial:LondonLogue)</em>, pp. 168-170, London, UK, 2019. 
+            In <em>Proceedings of the 23rd Workshop on the Semantics and Pragmatics of Dialogue (SemDial-LondonLogue)</em>, pp. 168-170, London, UK, 2019. 
 	    </p>
 
 	    <p>
